--- a/index.html
+++ b/index.html
@@ -6,42 +6,112 @@
   <title>Concurso de Pintxos — Jurado Popular</title>
   <meta name="theme-color" content="#111" />
   <style>
-    :root{--border:#eee;--muted:#666;--ink:#111}
+    :root{
+      --ink:#0f172a;            /* texto principal */
+      --muted:#667085;          /* texto secundario */
+      --border:#e6e8ec;         /* bordes suaves */
+      --brand:#ff6b00;          /* naranja marca */
+      --brand-2:#0ea5e9;        /* azul */
+      --brand-3:#10b981;        /* verde */
+      --chip:#f1f5f9;
+      --hero-base:#a85f2b;      /* color de respaldo parecido a la imagen */
+    }
     *{box-sizing:border-box}
-    body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial}
-    header{position:sticky;top:0;background:#fff;padding:12px 16px;border-bottom:1px solid var(--border);z-index:5}
-    h1{font-size:20px;margin:0}
-    .tabs{display:flex;gap:8px;margin-top:8px}
-    .tab{padding:8px 12px;border:1px solid #ddd;border-radius:999px;cursor:pointer;background:#fff}
-    .tab.active{background:var(--ink);color:#fff;border-color:var(--ink)}
-    main{padding:16px}
-    .search{width:100%;padding:10px 12px;border:1px solid #ddd;border-radius:8px;margin-bottom:16px}
-    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(260px,1fr));gap:12px}
-    .card{border:1px solid var(--border);border-radius:16px;overflow:hidden;display:flex;flex-direction:column;background:#fff}
-    .photo{width:100%;height:160px;object-fit:cover;background:#f6f6f6}
-    .content{padding:12px;display:flex;flex-direction:column;gap:6px}
-    .title{font-weight:700}.address{color:var(--muted);font-size:14px}
-    .actions{display:flex;gap:8px;margin-top:8px}
-    .btn{flex:1;text-align:center;text-decoration:none;border:1px solid var(--ink);border-radius:999px;padding:10px 12px;color:var(--ink)}
-    .btn.primary{background:var(--ink);color:#fff}
+    html,body{margin:0;overflow-x:hidden}
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial;background:#fafafa;color:var(--ink)}
+    a{color:inherit}
+
+    /* ======= HERO (full-bleed, fallback color, gradiente reforzado, zoom out) ======= */
+    header{
+      position: sticky; top: 0; z-index: 8; border-bottom: 1px solid var(--border);
+      background:
+        linear-gradient(90deg,
+          rgba(0,0,0,.78) 0%,
+          rgba(0,0,0,.55) 38%,
+          rgba(0,0,0,.28) 70%,
+          rgba(0,0,0,.12) 100%
+        ),
+        var(--hero, var(--hero-base));
+      background-color: var(--hero-base);
+      background-position: center;
+      background-repeat: no-repeat;
+      /* Zoom de la imagen: 1 = normal, 0.85 = “zoom out” */
+      background-size: calc(100% * var(--hero-zoom, 1));
+      color:#fff;
+
+      /* full-bleed: ocupa todo el viewport de ancho aunque el contenido esté centrado */
+      width: 100vw; max-width: 100vw;
+      margin-left: calc(50% - 50vw);
+      margin-right: calc(50% - 50vw);
+    }
+    .hero{
+      padding: 18px 16px 12px;
+      min-height: 240px;   /* ↑ sube este valor (260–300) para ver más foto */
+      display:flex; flex-direction:column; justify-content:flex-end;
+      backdrop-filter:saturate(120%);
+    }
+    .topbar{display:flex;align-items:center;gap:12px;justify-content:space-between}
+    h1{
+      margin:0;font-size:20px;line-height:1.2;
+      /* pastilla de contraste para legibilidad del título */
+      display:inline-block;padding:6px 10px;border-radius:10px;
+      background: rgba(0,0,0,.35); text-shadow: 0 2px 10px rgba(0,0,0,.45);
+    }
+    .lang{display:flex;gap:8px}
+    .pill{padding:7px 12px;border-radius:999px;border:1px solid rgba(255,255,255,.6);background:rgba(255,255,255,.08);color:#fff;cursor:pointer}
+    .pill.active{background:#fff;color:#111;border-color:#fff}
+    .tabs{display:flex;gap:8px;margin-top:10px}
+    .tab{padding:9px 14px;border:1px solid rgba(255,255,255,.7);border-radius:999px;background:rgba(255,255,255,.1);cursor:pointer;color:#fff;backdrop-filter:blur(4px)}
+    .tab.active{background:#fff;color:#111;border-color:#fff;box-shadow:0 2px 10px rgba(0,0,0,.08)}
+
+    /* ======= MAIN ======= */
+    main{padding:16px;max-width:1200px;margin:0 auto}
+    .search{width:100%;padding:12px 14px;border:1px solid var(--border);border-radius:12px;margin-bottom:16px;background:#fff}
+    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(260px,1fr));gap:14px}
+    .card{border:1px solid var(--border);border-radius:18px;overflow:hidden;background:#fff;box-shadow:0 2px 10px rgba(2,6,23,.04)}
+    .photo{width:100%;height:170px;object-fit:cover;background:#f1f5f9;display:block}
+    .content{padding:12px}
+    .title{font-weight:800;margin-bottom:2px}
+    .address{color:var(--muted);font-size:14px}
+    .actions{display:flex;gap:10px;margin-top:10px}
+    .btn{flex:1;text-align:center;text-decoration:none;border-radius:14px;padding:11px 12px;transition:.18s all ease}
+    .btn.primary{background:var(--brand);color:#fff;border:1px solid var(--brand)}
+    .btn.primary:hover{filter:brightness(.95);transform:translateY(-1px)}
+    .btn.ghost{border:1px solid var(--ink);background:#fff;color:var(--ink)}
+    .btn.ghost:hover{background:#111;color:#fff}
     .empty{color:#777;text-align:center;padding:40px}
+
+    /* ======= Ranking ======= */
     .rank-wrap{max-width:960px;margin:0 auto}
-    table{width:100%;border-collapse:collapse;border:1px solid var(--border);border-radius:12px;overflow:hidden;background:#fff}
-    thead th{background:#f8f8f8;text-align:left;font-weight:700}
-    th, td{padding:10px;border-bottom:1px solid #f0f0f0}
-    tr:nth-child(even) td{background:#fcfcfc}
+    table{width:100%;border-collapse:collapse;border:1px solid var(--border);border-radius:14px;overflow:hidden;background:#fff}
+    thead th{background:#f8fafc;text-align:left;font-weight:800}
+    th, td{padding:10px;border-bottom:1px solid #eef2f7}
+    tr:nth-child(even) td{background:#fcfdff}
+    .chip{display:inline-block;padding:4px 8px;border-radius:999px;background:var(--chip);font-size:12px;color:#0f172a}
     .pos{width:48px;text-align:center;font-variant-numeric:tabular-nums}
     .num{text-align:right;font-variant-numeric:tabular-nums}
     .updated{color:#888;font-size:12px;margin:8px 0 16px}
-    footer{color:#888;font-size:12px;text-align:center;padding:24px}
+    footer{color:#888;font-size:12px;text-align:center;padding:28px}
+
+    /* idioma pills colores */
+    #btn-es.active{background:var(--brand-2)!important;border-color:var(--brand-2)!important;color:#fff}
+    #btn-eu.active{background:var(--brand-3)!important;border-color:var(--brand-3)!important;color:#fff}
   </style>
 </head>
 <body>
   <header>
-    <h1>Concurso de Pintxos — Jurado Popular</h1>
-    <div class="tabs">
-      <button id="tab-bares" class="tab active">Bares</button>
-      <button id="tab-ranking" class="tab">Clasificación</button>
+    <div class="hero">
+      <div class="topbar">
+        <h1 id="title">Concurso de Pintxos — Jurado Popular</h1>
+        <div class="lang">
+          <button id="btn-es" class="pill active">CAS</button>
+          <button id="btn-eu" class="pill">EUS</button>
+        </div>
+      </div>
+      <div class="tabs">
+        <button id="tab-bares" class="tab active">Bares</button>
+        <button id="tab-ranking" class="tab">Clasificación</button>
+      </div>
     </div>
   </header>
 
@@ -61,10 +131,10 @@
           <thead>
             <tr>
               <th class="pos">#</th>
-              <th>Bar</th>
-              <th class="num">Puntos</th>
-              <th class="num">Votos</th>
-              <th class="num">Media</th>
+              <th id="th-bar">Bar</th>
+              <th class="num" id="th-puntos">Puntos</th>
+              <th class="num" id="th-votos">Votos</th>
+              <th class="num" id="th-media">Media</th>
             </tr>
           </thead>
           <tbody id="rank-tbody"></tbody>
@@ -73,16 +143,86 @@
     </section>
   </main>
 
-  <footer>Votación 1–10 · Un voto por persona y bar · © Auzoa</footer>
+  <footer id="footer">Votación 1–10 · Un voto por persona y bar · © Auzoa</footer>
 
   <script>
-    // ✅ URLs GViz reales de tu documento
-    const GVIZ_URL_BARES =
-      "https://docs.google.com/spreadsheets/d/1o9-3b-GwN8Z8QEmTIBTAahP8sXPF8oMrn-AB7MQMTew/gviz/tq?tqx=out:json&gid=2039727451&tq=select%20A,C,E,H&headers=1";
+    /* ========= Config ========= */
+    // Imagen de fondo del encabezado (en tu repo):
+    const HERO_IMG = "https://markelmartinez.github.io/sistema-votacion/pintxos.jpg";
+    // Aplica imagen + zoom out. Ajusta 0.80–0.95 si quieres.
+    const dynStyle = document.createElement('style');
+    dynStyle.textContent = `header{ --hero: url('${HERO_IMG}'); --hero-zoom: 0.85; }`;
+    document.head.appendChild(dynStyle);
 
-    const GVIZ_URL_RANKING =
-      "https://docs.google.com/spreadsheets/d/1o9-3b-GwN8Z8QEmTIBTAahP8sXPF8oMrn-AB7MQMTew/gviz/tq?tqx=out:json&sheet=Ranking";
+    // URLs GViz (Sheet: columnas A,C,E,H)
+    const GVIZ_URL_BARES   = "https://docs.google.com/spreadsheets/d/1o9-3b-GwN8Z8QEmTIBTAahP8sXPF8oMrn-AB7MQMTew/gviz/tq?tqx=out:json&gid=2039727451&tq=select%20A,C,E,H&headers=1";
+    const GVIZ_URL_RANKING = "https://docs.google.com/spreadsheets/d/1o9-3b-GwN8Z8QEmTIBTAahP8sXPF8oMrn-AB7MQMTew/gviz/tq?tqx=out:json&sheet=Ranking";
 
+    /* ========= i18n ========= */
+    const I18N = {
+      es: {
+        title: "Concurso de Pintxos — Jurado Popular",
+        tab_bares: "Bares",
+        tab_rank: "Clasificación",
+        search: "Busca por nombre o dirección...",
+        empty: "No hay resultados.",
+        voteBtn: "Votar 1–10",
+        mapsBtn: "Cómo llegar",
+        updated: "Actualizado:",
+        th_bar: "Bar",
+        th_pts: "Puntos",
+        th_votes: "Votos",
+        th_avg: "Media",
+        footer: "Votación 1–10 · Un voto por persona y bar · © Auzoa",
+      },
+      eu: {
+        title: "Pintxo Lehiaketa — Herri Epaimahaia",
+        tab_bares: "Tabernak",
+        tab_rank: "Sailkapena",
+        search: "Bilatu izenaren edo helbidearen arabera...",
+        empty: "Emaitzarik ez.",
+        voteBtn: "Bota 1–10",
+        mapsBtn: "Nola iritsi",
+        updated: "Eguneratua:",
+        th_bar: "Taberna",
+        th_pts: "Puntuak",
+        th_votes: "Botoak",
+        th_avg: "Batezbestekoa",
+        footer: "Bozketa 1–10 · Pertsona eta taberna bakoitzeko boto bat · © Auzoa",
+      }
+    };
+
+    function getLang(){
+      const urlParam = new URLSearchParams(location.search).get('lang');
+      if(urlParam === 'eu' || urlParam === 'es'){ localStorage.setItem('lang',urlParam); return urlParam; }
+      return localStorage.getItem('lang') || 'es';
+    }
+    let LANG = getLang();
+
+    function applyI18n(){
+      const t = I18N[LANG];
+      document.documentElement.lang = (LANG==='eu' ? 'eu' : 'es');
+      document.getElementById('title').textContent = t.title;
+      document.getElementById('tab-bares').textContent = t.tab_bares;
+      document.getElementById('tab-ranking').textContent = t.tab_rank;
+      document.getElementById('search').placeholder = t.search;
+      document.getElementById('empty').textContent = t.empty;
+      document.getElementById('th-bar').textContent = t.th_bar;
+      document.getElementById('th-puntos').textContent = t.th_pts;
+      document.getElementById('th-votos').textContent = t.th_votes;
+      document.getElementById('th-media').textContent = t.th_avg;
+      document.getElementById('footer').textContent = t.footer;
+
+      // botones dinámicos de las tarjetas
+      document.querySelectorAll('[data-i18n="voteBtn"]').forEach(a => a.textContent = t.voteBtn);
+      document.querySelectorAll('[data-i18n="mapsBtn"]').forEach(a => a.textContent = t.mapsBtn);
+
+      // activar pills
+      document.getElementById('btn-es').classList.toggle('active', LANG==='es');
+      document.getElementById('btn-eu').classList.toggle('active', LANG==='eu');
+    }
+
+    /* ========= GViz helpers (anti-caché) ========= */
     async function fetchGViz(url){
       const nocache = (url.includes("?") ? "&" : "?") + "_=" + Date.now();
       const res = await fetch(url + nocache);
@@ -91,7 +231,6 @@
       const end   = text.lastIndexOf('}');
       return JSON.parse(text.slice(start, end + 1));
     }
-
 
     async function fetchBares(){
       const json = await fetchGViz(GVIZ_URL_BARES);
@@ -103,7 +242,6 @@
           direccion: r.c?.[2]?.v || "",
           foto:      r.c?.[3]?.v || ""
         }))
-        // Filtra filas vacías o la cabecera por si llega como dato
         .filter(b => b.nombre && b.nombre !== "Bar" && b.link);
     }
 
@@ -120,12 +258,13 @@
       return data;
     }
 
-    // ---- UI: Bares ----
+    /* ========= UI: Bares ========= */
     const grid  = document.getElementById('grid');
     const empty = document.getElementById('empty');
     const search= document.getElementById('search');
 
     function renderBares(list){
+      const t = I18N[LANG];
       grid.innerHTML = '';
       list.forEach(b => {
         const card = document.createElement('div'); card.className='card';
@@ -140,8 +279,8 @@
         if (b.direccion) addr.textContent = b.direccion.trim();
 
         const actions=document.createElement('div'); actions.className='actions';
-        const votar=document.createElement('a'); votar.className='btn primary'; votar.href=b.link; votar.target='_blank'; votar.rel='noopener noreferrer'; votar.textContent='Votar 1–10';
-        const maps=document.createElement('a'); maps.className='btn'; maps.href='https://www.google.com/maps/search/'+encodeURIComponent(b.nombre+' '+(b.direccion||'')); maps.target='_blank'; maps.rel='noopener noreferrer'; maps.textContent='Cómo llegar';
+        const votar=document.createElement('a'); votar.className='btn primary'; votar.href=b.link; votar.target='_blank'; votar.rel='noopener noreferrer'; votar.dataset.i18n="voteBtn"; votar.textContent=t.voteBtn;
+        const maps=document.createElement('a'); maps.className='btn ghost'; maps.href='https://www.google.com/maps/search/'+encodeURIComponent(b.nombre+' '+(b.direccion||'')); maps.target='_blank'; maps.rel='noopener noreferrer'; maps.dataset.i18n="mapsBtn"; maps.textContent=t.mapsBtn;
 
         actions.appendChild(votar); actions.appendChild(maps);
         content.appendChild(title); if (b.direccion) content.appendChild(addr); content.appendChild(actions);
@@ -151,16 +290,17 @@
       empty.style.display = list.length ? 'none' : 'block';
     }
 
-    // ---- UI: Ranking ----
+    /* ========= UI: Ranking ========= */
     const rankBody    = document.getElementById('rank-tbody');
     const rankUpdated = document.getElementById('rank-updated');
 
     function renderRanking(rows){
+      const t = I18N[LANG];
       rankBody.innerHTML = '';
       rows.forEach((r,i) => {
         const tr = document.createElement('tr');
         tr.innerHTML = `
-          <td class="pos">${i+1}</td>
+          <td class="pos"><span class="chip">#${i+1}</span></td>
           <td>${r.bar}</td>
           <td class="num">${r.puntos}</td>
           <td class="num">${r.votos}</td>
@@ -168,16 +308,16 @@
         `;
         rankBody.appendChild(tr);
       });
-      rankUpdated.textContent = "Actualizado: " + new Date().toLocaleString();
+      rankUpdated.textContent = `${t.updated} ${new Date().toLocaleString()}`;
     }
 
-    // Tabs
+    /* ========= Tabs ========= */
     const tabBares=document.getElementById('tab-bares'), tabRanking=document.getElementById('tab-ranking');
     const viewBares=document.getElementById('view-bares'), viewRanking=document.getElementById('view-ranking');
     tabBares.onclick=()=>{tabBares.classList.add('active');tabRanking.classList.remove('active');viewBares.style.display='';viewRanking.style.display='none';};
     tabRanking.onclick=()=>{tabRanking.classList.add('active');tabBares.classList.remove('active');viewRanking.style.display='';viewBares.style.display='none';};
 
-    // Búsqueda
+    /* ========= Búsqueda ========= */
     let LISTA=[];
     function filtrar(){
       const q=search.value.trim().toLowerCase();
@@ -188,18 +328,25 @@
     }
     search.addEventListener('input', filtrar);
 
-    // Carga inicial
+    /* ========= Idioma ========= */
+    document.getElementById('btn-es').onclick = ()=>{ LANG='es'; localStorage.setItem('lang','es'); applyI18n(); filtrar(); renderRankingCache(); history.replaceState(null,"",location.pathname+"?lang=es"); };
+    document.getElementById('btn-eu').onclick = ()=>{ LANG='eu'; localStorage.setItem('lang','eu'); applyI18n(); filtrar(); renderRankingCache(); history.replaceState(null,"",location.pathname+"?lang=eu"); };
+
+    /* ========= Carga inicial ========= */
+    let RANK_CACHE=[];
+    function renderRankingCache(){ if(RANK_CACHE.length) renderRanking(RANK_CACHE); }
+
     (async () => {
       try {
+        applyI18n();
         LISTA = await fetchBares(); renderBares(LISTA);
-        const rank = await fetchRanking(); renderRanking(rank);
+        RANK_CACHE = await fetchRanking(); renderRanking(RANK_CACHE);
       } catch(e){
         console.error(e);
         empty.style.display='block';
-        empty.textContent='No se han podido cargar los datos.';
+        empty.textContent = I18N[LANG].empty;
       }
     })();
   </script>
 </body>
 </html>
-
