--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </section>
   </main>
 
-  <footer id="footer">Votación 1–10 · Un voto por persona y bar · © Auzoa</footer>
+  <footer id="footer">Votación 1–10 · Un voto por persona y bar · © Auzotik auzoarentzat</footer>
 
   <script>
     /* ========= Config ========= */
@@ -173,22 +173,22 @@
         th_pts: "Puntos",
         th_votes: "Votos",
         th_avg: "Media",
-        footer: "Votación 1–10 · Un voto por persona y bar · © Auzoa",
+        footer: "Votación 1–10 · Un voto por persona y bar · © Auzotik auzoarentzat",
       },
       eu: {
-        title: "Pintxo Lehiaketa — Herri Epaimahaia",
+        title: "Pintxo Lehiaketa — Epaimahai Herrikoia",
         tab_bares: "Tabernak",
         tab_rank: "Sailkapena",
         search: "Bilatu izenaren edo helbidearen arabera...",
-        empty: "Emaitzarik ez.",
-        voteBtn: "Bota 1–10",
+        empty: "Emaitzik ez.",
+        voteBtn: "Bozkatu 1-etik – 10-era",
         mapsBtn: "Nola iritsi",
         updated: "Eguneratua:",
         th_bar: "Taberna",
         th_pts: "Puntuak",
-        th_votes: "Botoak",
+        th_votes: "Bozkak",
         th_avg: "Batezbestekoa",
-        footer: "Bozketa 1–10 · Pertsona eta taberna bakoitzeko boto bat · © Auzoa",
+        footer: "Bozketa 1–10 · Pertsona eta taberna bakoitzeko bozka bakarra · © Auzotik auzoarentzat",
       }
     };
 
@@ -350,3 +350,4 @@
   </script>
 </body>
 </html>
+
