--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         tab_rank: "Sailkapena",
         search: "Bilatu izenaren edo helbidearen arabera...",
         empty: "Emaitzik ez.",
-        voteBtn: "Bozkatu 1-etik – 10-era",
+        voteBtn: "Bozkatu 1-10",
         mapsBtn: "Nola iritsi",
         updated: "Eguneratua:",
         th_bar: "Taberna",
@@ -350,4 +350,5 @@
   </script>
 </body>
 </html>
+
 
