--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Concurso de Pintxos — Jurado Popular</title>
   <meta name="theme-color" content="#111" />
+
+  <!-- Fuente festiva -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
   <style>
     :root{
       --ink:#0f172a;            /* texto principal */
@@ -57,6 +63,22 @@
       display:inline-block;padding:6px 10px;border-radius:10px;
       background: rgba(0,0,0,.35); text-shadow: 0 2px 10px rgba(0,0,0,.45);
     }
+
+    /* ===== Slogan festivo centrado ===== */
+    .slogan-wrap{width:100%; text-align:center; margin:10px 0 8px;}
+    .slogan{
+      font-family:"Pacifico", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, cursive;
+      font-size: clamp(18px, 3vw, 28px);
+      line-height: 1.15;
+      color:#fff;
+      text-shadow: 0 3px 14px rgba(0,0,0,.6), 0 1px 3px rgba(0,0,0,.35);
+      letter-spacing:.2px;
+      display:inline-block;
+      padding:4px 10px;
+      border-radius:12px;
+      background: linear-gradient(180deg, rgba(0,0,0,.18), rgba(0,0,0,.05));
+    }
+
     .lang{display:flex;gap:8px}
     .pill{padding:7px 12px;border-radius:999px;border:1px solid rgba(255,255,255,.6);background:rgba(255,255,255,.08);color:#fff;cursor:pointer}
     .pill.active{background:#fff;color:#111;border-color:#fff}
@@ -108,6 +130,12 @@
           <button id="btn-eu" class="pill">EUS</button>
         </div>
       </div>
+
+      <!-- Slogan festivo centrado (mismo texto en CAS/EUS) -->
+      <div class="slogan-wrap">
+        <div class="slogan">Gora Uribarri eta Matikoko jaiak!</div>
+      </div>
+
       <div class="tabs">
         <button id="tab-bares" class="tab active">Bares</button>
         <button id="tab-ranking" class="tab">Clasificación</button>
@@ -181,7 +209,7 @@
         tab_rank: "Sailkapena",
         search: "Bilatu izenaren edo helbidearen arabera...",
         empty: "Emaitzik ez.",
-        voteBtn: "Bozkatu 1-10",
+        voteBtn: "Bozkatu 1-etik – 10-era",
         mapsBtn: "Nola iritsi",
         updated: "Eguneratua:",
         th_bar: "Taberna",
@@ -350,5 +378,3 @@
   </script>
 </body>
 </html>
-
-
