--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         tab_rank: "Sailkapena",
         search: "Bilatu izenaren edo helbidearen arabera...",
         empty: "Emaitzik ez.",
-        voteBtn: "Bozkatu 1-etik – 10-era",
+        voteBtn: "Bozkatu 1-10",
         mapsBtn: "Nola iritsi",
         updated: "Eguneratua:",
         th_bar: "Taberna",
@@ -378,3 +378,4 @@
   </script>
 </body>
 </html>
+
