--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
     document.head.appendChild(dynStyle);
 
     // URLs GViz (Sheet: columnas A,C,E,H)
-    const GVIZ_URL_BARES   = "https://docs.google.com/spreadsheets/d/1o9-3b-GwN8Z8QEmTIBTAahP8sXPF8oMrn-AB7MQMTew/gviz/tq?tqx=out:json&gid=2039727451&tq=select%20A,C,E,H&headers=1";
+    const GVIZ_URL_BARES = "https://docs.google.com/spreadsheets/d/1o9-3b-GwN8Z8QEmTIBTAahP8sXPF8oMrn-AB7MQMTew/gviz/tq?tqx=out:json&gid=2039727451&tq=select%20A,C,F,H&headers=1";
+
     const GVIZ_URL_RANKING = "https://docs.google.com/spreadsheets/d/1o9-3b-GwN8Z8QEmTIBTAahP8sXPF8oMrn-AB7MQMTew/gviz/tq?tqx=out:json&sheet=Ranking";
 
     /* ========= i18n ========= */
@@ -378,4 +379,5 @@
   </script>
 </body>
 </html>
+
 
