--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Concurso de Pintxos — Jurado Popular</title>
   <meta name="theme-color" content="#111" />
 
-  <!-- Fuente festiva -->
+  <!-- Fuente festiva para el slogan -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
@@ -64,7 +64,7 @@
       background: rgba(0,0,0,.35); text-shadow: 0 2px 10px rgba(0,0,0,.45);
     }
 
-    /* ===== Slogan festivo centrado ===== */
+    /* ===== Slogan festivo centrado + logo debajo ===== */
     .slogan-wrap{width:100%; text-align:center; margin:10px 0 8px;}
     .slogan{
       font-family:"Pacifico", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, cursive;
@@ -77,6 +77,14 @@
       padding:4px 10px;
       border-radius:12px;
       background: linear-gradient(180deg, rgba(0,0,0,.18), rgba(0,0,0,.05));
+    }
+    .slogan-logo-wrap{ text-align:center; margin-top:6px; }
+    .slogan-logo{
+      height:34px; width:auto;
+      filter: drop-shadow(0 2px 8px rgba(0,0,0,.35));
+    }
+    @media (min-width: 900px){
+      .slogan-logo{ height:38px; }
     }
 
     .lang{display:flex;gap:8px}
@@ -131,9 +139,16 @@
         </div>
       </div>
 
-      <!-- Slogan festivo centrado (mismo texto en CAS/EUS) -->
+      <!-- Slogan + logo debajo -->
       <div class="slogan-wrap">
         <div class="slogan">Gora Uribarri eta Matikoko jaiak!</div>
+        <div class="slogan-logo-wrap">
+          <img class="slogan-logo"
+               src="https://markelmartinez.github.io/sistema-votacion/urtiko.png"
+               alt="Logo"
+               loading="eager"
+               decoding="async" />
+        </div>
       </div>
 
       <div class="tabs">
@@ -182,10 +197,11 @@
     dynStyle.textContent = `header{ --hero: url('${HERO_IMG}'); --hero-zoom: 0.85; }`;
     document.head.appendChild(dynStyle);
 
-    // URLs GViz (Sheet: columnas A,C,E,H)
-    const GVIZ_URL_BARES = "https://docs.google.com/spreadsheets/d/1o9-3b-GwN8Z8QEmTIBTAahP8sXPF8oMrn-AB7MQMTew/gviz/tq?tqx=out:json&gid=2039727451&tq=select%20A,C,F,H&headers=1";
-
-    const GVIZ_URL_RANKING = "https://docs.google.com/spreadsheets/d/1o9-3b-GwN8Z8QEmTIBTAahP8sXPF8oMrn-AB7MQMTew/gviz/tq?tqx=out:json&sheet=Ranking";
+    // URLs GViz (Sheet: columnas A,C,F,H)  **F = Dirección**
+    const GVIZ_URL_BARES =
+      "https://docs.google.com/spreadsheets/d/1o9-3b-GwN8Z8QEmTIBTAahP8sXPF8oMrn-AB7MQMTew/gviz/tq?tqx=out:json&gid=2039727451&tq=select%20A,C,F,H&headers=1";
+    const GVIZ_URL_RANKING =
+      "https://docs.google.com/spreadsheets/d/1o9-3b-GwN8Z8QEmTIBTAahP8sXPF8oMrn-AB7MQMTew/gviz/tq?tqx=out:json&sheet=Ranking";
 
     /* ========= i18n ========= */
     const I18N = {
@@ -210,7 +226,7 @@
         tab_rank: "Sailkapena",
         search: "Bilatu izenaren edo helbidearen arabera...",
         empty: "Emaitzik ez.",
-        voteBtn: "Bozkatu 1-10",
+        voteBtn: "Bozkatu 1-etik – 10-era",
         mapsBtn: "Nola iritsi",
         updated: "Eguneratua:",
         th_bar: "Taberna",
@@ -268,7 +284,7 @@
         .map(r => ({
           nombre:    r.c?.[0]?.v || "",
           link:      r.c?.[1]?.v || "",
-          direccion: r.c?.[2]?.v || "",
+          direccion: r.c?.[2]?.v || "",  // <- columna F
           foto:      r.c?.[3]?.v || ""
         }))
         .filter(b => b.nombre && b.nombre !== "Bar" && b.link);
@@ -309,7 +325,15 @@
 
         const actions=document.createElement('div'); actions.className='actions';
         const votar=document.createElement('a'); votar.className='btn primary'; votar.href=b.link; votar.target='_blank'; votar.rel='noopener noreferrer'; votar.dataset.i18n="voteBtn"; votar.textContent=t.voteBtn;
-        const maps=document.createElement('a'); maps.className='btn ghost'; maps.href='https://www.google.com/maps/search/'+encodeURIComponent(b.nombre+' '+(b.direccion||'')); maps.target='_blank'; maps.rel='noopener noreferrer'; maps.dataset.i18n="mapsBtn"; maps.textContent=t.mapsBtn;
+
+        // Buscar en Maps (o navega directo con dir/?api=1)
+        const maps=document.createElement('a');
+        maps.className='btn ghost';
+        maps.href='https://www.google.com/maps/search/'+encodeURIComponent(b.nombre+' '+(b.direccion||''));
+        // Alternativa navegación directa:
+        // maps.href='https://www.google.com/maps/dir/?api=1&destination='+encodeURIComponent(b.nombre+' '+(b.direccion||''));
+        maps.target='_blank'; maps.rel='noopener noreferrer';
+        maps.dataset.i18n="mapsBtn"; maps.textContent=t.mapsBtn;
 
         actions.appendChild(votar); actions.appendChild(maps);
         content.appendChild(title); if (b.direccion) content.appendChild(addr); content.appendChild(actions);
@@ -379,5 +403,3 @@
   </script>
 </body>
 </html>
-
-
