--- a/index.html
+++ b/index.html
@@ -80,11 +80,12 @@
     }
     .slogan-logo-wrap{ text-align:center; margin-top:6px; }
     .slogan-logo{
-      height:34px; width:auto;
+      height:44px;               /* antes 34px */
+      width:auto;
       filter: drop-shadow(0 2px 8px rgba(0,0,0,.35));
     }
     @media (min-width: 900px){
-      .slogan-logo{ height:38px; }
+      .slogan-logo{ height:52px; }
     }
 
     .lang{display:flex;gap:8px}
@@ -403,3 +404,4 @@
   </script>
 </body>
 </html>
+
