--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     /* ========= Config ========= */
     const HERO_IMG = "https://markelmartinez.github.io/sistema-votacion/pintxos.jpg";
     const dynStyle = document.createElement('style');
-    dynStyle.textContent = `header{ --hero: url('${HERO_IMG}'); --hero-zoom: 0.65; }`;
+    dynStyle.textContent = `header{ --hero: url('${HERO_IMG}'); --hero-zoom: 0.85; }`;
     document.head.appendChild(dynStyle);
 
     // A,C,F,H -> nombre, enlace, dirección, foto
@@ -222,7 +222,7 @@
         th_pts: "Puntuak",
         th_votes: "Bozkak",
         th_avg: "Batezbestekoa",
-        criteria: "Irabazlea: puntu gehien dituen taberna. Berdinketa gertatuz gero, batezbestekoa eta ondoren bozk kopurua hartuko dira kontuan.",
+        criteria: "Irabazlea: puntu gehien dituen taberna. Berdinketa emanez gero, batezbestekoa eta ondoren bozka kopurua hartuko dira kontuan.",
         footer: "Bozketa 1–10 · Pertsona eta taberna bakoitzeko bozka bakarra · © Auzotik auzoarentzat",
       }
     };
@@ -387,4 +387,5 @@
   </script>
 </body>
 </html>
+
 
